--- a/style.css
+++ b/style.css
@@ -1,30 +1,27 @@
-li {
-  list-style: none;
+h1{
+  margin-left: 3rem;
 }
 li{
-  padding-left: 2rem;
+  list-style: none;
+  margin-left: 2rem;
 }
-h1{
-  font-size: 1rem;
-}
-
-
-.navbar>nav {
-
-  color: black;
+nav{
   display: flex;
   justify-content: space-between;
-  font-family: fantasy;
-}
 
+}
+.navbar>nav{
+  display: flex;
+  justify-content: space-between;
+}
 ul{
   display: flex;
 }
-.imagephoto{
-    height: 140vh;
-    width: 95vw;
-    margin-left: 2vw;
-    margin-right: 2vw;
+.footer{
+  height: 80px;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 .skills{
   display: flex;
@@ -33,12 +30,9 @@ ul{
   text-align: center;
   margin-top: 2rem;
 }
-.footer{
-    background-color: black;
-    color: white;
-    text-align: center;  
+img[src="images/lap.jpeg"]{
+  height: 100vh;
+  width: 95vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
-.footer>p{
-  font-size: 25px;
-}
-
